name:                servant-persistent
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/paradoja/servant-persistent#readme
license:             BSD3
license-file:        LICENSE
author:              Abby Henríquez Tejera
maintainer:          paradoja@gmail.com
copyright:           2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Config
                     , Models
                     , Api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson >= 0.10 && < 0.11
                     , either >= 4.4.1 && < 4.5
                     , monad-logger >= 0.3 && < 0.4
                     , mtl >= 2.2.1 && < 2.3
                     , persistent >= 2.2 && < 2.3
                     , persistent-postgresql >= 2.2 && < 2.3
                     , persistent-template >= 2.1 && < 2.2
                     , servant >= 0.4.4.6 && < 0.5
                     , servant-server >= 0.4.4.6 && < 0.5
                     , transformers >= 0.4 && < 0.5
                     , wai >= 3.0 && < 3.1
                     , wai-extra >= 3.0 && < 3.1
                     , warp >= 3.1 && < 3.2
  default-language:    Haskell2010

test-suite servant-persistent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-persistent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/paradoja/servant-persistent
